<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutExpanded"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:weightSum="100">

    <TextView
        android:id="@+id/textViewExpandedHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Header"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/primaryText"
        android:textSize="11sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:lineSpacingExtra="0dp"/>

    <ImageView
        android:id="@+id/imageViewExpanded"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="2dp"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <!-- Horizontal line (using TextView with background color) -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primaryText"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/primaryText"
        android:textSize="11sp"
        android:lineSpacingExtra="0dp"
        android:ellipsize="end"/>

    <ImageButton
        android:id="@+id/playButtonExpanded"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_media_play"
        android:tint="@color/primaryText"
        android:visibility="gone"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <!-- Your custom layout components, e.g., TextViews, ImageViews, Buttons, etc. -->
        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="#d32f2e"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:minWidth="0dp"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:ellipsize="none"
            android:text="@string/again" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="#465a65"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:minWidth="0dp"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:ellipsize="none"
            android:text="@string/hard" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="#4cb050"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:minWidth="0dp"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:ellipsize="none"
            android:text="@string/good" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="#03a9f5"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:minWidth="0dp"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:ellipsize="none"
            android:text="@string/easy" />
    </LinearLayout>
</LinearLayout>
